--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ thresholds/test_scores.txt
 results/KBOX-iterative-T1/labeled.tsv
 results/KBOX-iterative-T1/labeled2.tsv
 results/KBOX-iterative-T1/labeled3.tsv
+results/KBOX-iterative-T1/pa_labeled3.tsv
 results/KBOX-iterative-T1/normal_labeled.tsv
 results/KBOX-iterative-T1/normal_unlabeled.tsv
 results/KBOX-iterative-T1/unlabeled.tsv
